--- a/final/css/login.css
+++ b/final/css/login.css
@@ -42,6 +42,29 @@ html{
     border-radius: 10px;
 }
 
+.loginBoard .alertMSG{
+    /* position: absolute; */
+    word-break:keep-all;
+    max-width: 400px;
+    min-height: 20px;
+    width: 50%;
+    height: fit-content;
+    /* background-color: #2F558E; */
+    /* grid-row: 2;
+    grid-column: 2; */
+    /* padding: 7px 30px 7px 30px;
+    margin-left: 50px;
+    margin-top: 7px; */
+    /* align-self: center; */
+    font-size: 15px;
+    color:red;
+    border-radius: 10px;
+    display: flex;
+    /* justify-content: space-around; */
+    /* align-items: left; */
+    /* display: none; */
+}
+
 .signIn{
     margin: 15px;
     font-size: 20px;
@@ -63,7 +86,7 @@ html{
 }
 
 .divideLine{
-    border: 1.5px slid lightgray;
+    border: 1.5px solid lightgray;
     width: 48%;
 }
 
